--- a/Botonconestilo.html
+++ b/Botonconestilo.html
@@ -46,7 +46,7 @@
         <br>
 
         <div class="contenedor-botones">
-            <a href="Index.html" button class="Boton"><span>Volver</span></button></a>
+            <a href="index.html" button class="Boton"><span>Volver</span></button></a>
           </div>   
 </body>
 
