--- a/BotonesRadio.html
+++ b/BotonesRadio.html
@@ -60,7 +60,7 @@
        
 
         <div class="contenedor-botones">
-            <a href="Index.html" button class="Boton"><span>Volver</span></button></a>
+            <a href="index.html" button class="Boton"><span>Volver</span></button></a>
           </div>   
 </body>
 
