--- a/Jquery.html
+++ b/Jquery.html
@@ -52,7 +52,7 @@
     </center>
 
     <div class="contenedor-botones">
-        <a href="Index.html" button class="Boton"><span>Volver</span></button></a>
+        <a href="index.html" button class="Boton"><span>Volver</span></button></a>
       </div>  
 
 </body>
