--- a/Botones.html
+++ b/Botones.html
@@ -26,10 +26,10 @@
 
                 <nav>
                     <ul>
-                        <li><a href="Botones.html"> <i class="fas fa-home"></i>Botones</a></li>
-                        <li><a href="Botones con estilo.html"> <i class="fab fa-youtube"> </i>Botones con estilo</a></li>
-                        <li><a href="Botones Radio.html"> <i class="fas fa-headset"></i> Botones Radio</a></li>
-                        <li><a href="Jquery.html"> <i class="fas fa-headset"></i> Jquery</a></li>
+                       <li><a href="Botones.html"> <i class="fas fa-home"></i>Botones</a></li>
+                        <li><a href="Botones con estilo.html"> <i class="fas fa-home"> </i>Botones con estilo</a></li>
+                        <li><a href="Botones Radio.html"> <i class="fas fa-home"></i> Botones Radio</a></li>
+                        <li><a href="Jquery.html"> <i class="fas fa-home"></i> Jquery</a></li>
                     </ul>
                 </nav>
 
